font color change?

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1759,7 +1759,7 @@ input, select, textarea {
 	}
 
 	header p {
-		color: #aaa;
+		color: #fff;
 		position: relative;
 		margin: 0 0 1.6875em 0;
 	}
